fix Users fields and dev survey